tests/invalid/05_operador_invalido.mini0
// Operador no valido

fun main()
    x: int
    x = 2 % 3
end